tests/unit/language/errors/assert_pass.arche
// RUN: %arche build -o %t %s && %t | grep done
main :: proc () {
  printf("test\n");
  assert(1, "should not see this\n");
  printf("done\n");
}
